--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FUNFACT</title>
+    <title>BADCAT</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/../styles/style.css">
   </head>
@@ -16,7 +16,7 @@
     </header>
 
     <div class="content row">
-      CONTENT
+      Ratings go here
     </div> <!-- end content -->
     <footer>
       <div class="row">
@@ -24,14 +24,5 @@
          FOOTER
       </div>
     </footer>
-    <script src="/../js/masonry.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $('.masonry-container').masonry({
-          itemSelector: '.masonry-item',
-          gutter: 20
-        });
-      });
-    </script>
   </body>
 </html>
